--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <build_depend>tf2_eigen</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>rosdoc_lite</build_depend>
   <build_export_depend>nodelet</build_export_depend>
   <build_export_depend>pcl_ros</build_export_depend>
   <build_export_depend>pluginlib</build_export_depend>
@@ -27,6 +28,7 @@
   <build_export_depend>tf2_eigen</build_export_depend>
   <build_export_depend>tf2_ros</build_export_depend>
   <build_export_depend>visualization_msgs</build_export_depend>
+  <build_export_depend>rosdoc_lite</build_export_depend>
   <exec_depend>nodelet</exec_depend>
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>pluginlib</exec_depend>
@@ -36,8 +38,10 @@
   <exec_depend>tf2_eigen</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>visualization_msgs</exec_depend>
+  <exec_depend>rosdoc_lite</exec_depend>
 
   <export>
     <nodelet plugin="${prefix}/nodelet.xml"/>
+    <rosdoc config="rosdoc.yaml"/>
   </export>
 </package>
